--- a/app/src/main/res/values/plans_mapping.xml
+++ b/app/src/main/res/values/plans_mapping.xml
@@ -57,7 +57,7 @@
         <item>plan_id_mail2022</item>
         <item>plan_id_vpn2022</item>
         <item>plan_id_drive2022</item>
-        <item>plan_id_bundle2022</item>
+        <item>plan_pass_bundle2022</item>
         <item>plan_id_pass2023</item>
     </string-array>
     <!-- endregion -->
