Set MailPro and BundlePro plans layouts.

--- a/app/src/main/res/values/plans_mapping.xml
+++ b/app/src/main/res/values/plans_mapping.xml
@@ -29,6 +29,8 @@
         <item>bundle2022</item>
         <item>pass2023</item>
         <item>family2022</item>
+        <item>mailpro2022</item>
+        <item>bundlepro2022</item>
     </string-array>
     <!-- region current plan mapping -->
     <string-array name="plan_mapping_current_plan_layouts">
@@ -44,6 +46,8 @@
         <item>plan_pass_bundle2022</item>
         <item>plan_id_pass2023</item>
         <item>plan_id_family2022</item>
+        <item>plan_pass_free</item>
+        <item>plan_id_pass2023</item>
     </string-array>
     <!-- endregion -->
     <!-- region paid plan mapping -->
@@ -59,6 +63,8 @@
         <item>plan_id_drive2022</item>
         <item>plan_pass_bundle2022</item>
         <item>plan_id_pass2023</item>
+        <item>plan_id_mailpro2022</item>
+        <item>plan_id_bundlepro2022</item>
     </string-array>
     <!-- endregion -->
 </resources>
