--- a/pass/autofill/impl/src/main/res/xml/autofill_service.xml
+++ b/pass/autofill/impl/src/main/res/xml/autofill_service.xml
@@ -71,6 +71,7 @@
     <compatibility-package android:name="org.bromite.bromite" android:maxLongVersionCode="10000000000" />
     <compatibility-package android:name="org.bromite.chromium" android:maxLongVersionCode="10000000000" />
     <compatibility-package android:name="org.chromium.chrome" android:maxLongVersionCode="10000000000" />
+    <compatibility-package android:name="org.chromium.webview_shell" android:maxLongVersionCode="10000000000" />
     <compatibility-package android:name="org.codeaurora.swe.browser" android:maxLongVersionCode="10000000000" />
     <compatibility-package android:name="org.gnu.icecat" android:maxLongVersionCode="10000000000" />
     <compatibility-package android:name="org.mozilla.fenix" android:maxLongVersionCode="10000000000" />
