feat: Enable Account recovery.

--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <bool name="core_feature_account_recovery_enabled">true</bool>
     <bool name="core_feature_key_transparency_enabled">false</bool>
+    <bool name="core_feature_notifications_enabled">true</bool>
+    <!-- Show system Notification permission request dialog after login. -->
+    <bool name="core_feature_notifications_permission_request_enabled">true</bool>
 </resources>
