chore: add autofill manager sample activity

--- a/pass/autofill/test-app/src/main/res/layout/activity_sample_selection.xml
+++ b/pass/autofill/test-app/src/main/res/layout/activity_sample_selection.xml
@@ -25,6 +25,13 @@
                 android:text="Activity Login" />
 
             <Button
+                android:id="@+id/simpleAutofillManagerLoginButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:text="Autofill manager Login" />
+
+            <Button
                 android:id="@+id/simpleFragmentLoginButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
