--- a/pass/autofill/impl/src/main/res/xml/autofill_service.xml
+++ b/pass/autofill/impl/src/main/res/xml/autofill_service.xml
@@ -7,6 +7,8 @@
     <!-- List extracted from https://github.com/bitwarden/mobile -->
     <compatibility-package android:name="alook.browser" android:maxLongVersionCode="10000000000" />
     <compatibility-package android:name="alook.browser.google" android:maxLongVersionCode="10000000000" />
+    <compatibility-package android:name="app.vanadium.browser" android:maxLongVersionCode="10000000000" />
+    <compatibility-package android:name="app.vanadium.webview" android:maxLongVersionCode="10000000000" />
     <compatibility-package android:name="com.amazon.cloud9" android:maxLongVersionCode="10000000000" />
     <compatibility-package android:name="com.android.browser" android:maxLongVersionCode="10000000000" />
     <compatibility-package android:name="com.android.chrome" android:maxLongVersionCode="10000000000" />
