--- a/pass/autofill/test-app/src/main/res/layout/activity_sample_selection.xml
+++ b/pass/autofill/test-app/src/main/res/layout/activity_sample_selection.xml
@@ -53,6 +53,13 @@
                 android:text="Compose Login" />
 
             <Button
+                android:id="@+id/creditCardButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:text="Credit card" />
+
+            <Button
                 android:id="@+id/webviewLoginButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
