--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -5,4 +5,6 @@
     <bool name="core_feature_notifications_enabled">true</bool>
     <!-- Show system Notification permission request dialog after login. -->
     <bool name="core_feature_notifications_permission_request_enabled">true</bool>
+
+    <bool name="leak_canary_add_dynamic_shortcut">false</bool>
 </resources>
