chore: point the shortcut to the prod version

--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -24,7 +24,7 @@
         <intent
             android:action="android.intent.action.VIEW"
             android:targetClass="proton.android.pass.ui.shortcuts.ShortcutActivity"
-            android:targetPackage="proton.android.pass.dev.black">
+            android:targetPackage="proton.android.pass">
             <extra
                 android:name="shortcutaction"
                 android:value="sharelogs" />
