--- a/pass/compose-components/impl/src/main/res/drawable/ic_pin_angled.xml
+++ b/pass/compose-components/impl/src/main/res/drawable/ic_pin_angled.xml
@@ -1,19 +1,19 @@
 <!--
-  ~ Copyright (c) 2024 Proton Technologies AG
-  ~ This file is part of Proton AG and ProtonCore.
+  ~ Copyright (c) 2024 Proton AG
+  ~ This file is part of Proton AG and Proton Pass.
   ~
-  ~ ProtonCore is free software: you can redistribute it and/or modify
+  ~ Proton Pass is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
   ~ the Free Software Foundation, either version 3 of the License, or
   ~ (at your option) any later version.
   ~
-  ~ ProtonCore is distributed in the hope that it will be useful,
+  ~ Proton Pass is distributed in the hope that it will be useful,
   ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
   ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   ~ GNU General Public License for more details.
   ~
   ~ You should have received a copy of the GNU General Public License
-  ~ along with ProtonCore.  If not, see <https://www.gnu.org/licenses/>.
+  ~ along with Proton Pass.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
